--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -42,7 +42,7 @@
                     <th class="cantidad">Cantidad</th>
                     <th class="ingreso">Ingreso</th>
                     <th class="egreso">Egreso</th>
-                    <th class="valorpar">Parcial</th>
+                    <th class="valorpar">Saldo Parcial</th>
                 </tr>
             </thead>
             <tbody class="planilla">
